syntax = "proto3";

package scenario;

// ----------- 메시지 정의 -----------

message ScenarioNameRequest {
  string name = 1; // Alternative 1: 시나리오 이름만 전달
  uint64 timestamp_nanos = 2; // sender가 보낸 시점의 nanosecond timestamp
}

message ScenarioYamlRequest {
  string yaml = 1; // Alternative 2: 전체 YAML 문자열 전달
  uint64 timestamp_nanos = 2; // sender가 보낸 시점의 nanosecond timestamp
}

message ScenarioResponse {
  string status = 1;       // 처리 결과 메시지
  uint64 elapsed_ms = 2;   // 처리 시간 (ms 단위)
}

// ----------- 서비스 정의 -----------

service ScenarioService {
  // Alternative 1: 이름 기반 조회
  rpc SendName(ScenarioNameRequest) returns (ScenarioResponse);

  // Alternative 2: YAML 전체 전달
  rpc SendYaml(ScenarioYamlRequest) returns (ScenarioResponse);
}
